<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Interactivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="next">Next</string>
    <string name="title">Title</string>

    <string name="enter_description_hint">Enter your description of marker...</string>
    <string name="description">Description</string>
    <string name="enter_title_hint">Enter your title of marker...</string>
    <string name="add_marker">Add marker</string>
    <string name="list">List</string>
    <string name="marker_list_activity">List of markers</string>
    <string name="show_all_markers">Show all markers on map</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="exit">Exit</string>
    <string name="edit_marker">Edit marker</string>

</resources>
